@@ -1485,8 +1485,6 @@ Yank (copy) something to the clipboard or primary selection.
  - `title`: The current page's title.
  - `domain`: The current scheme, domain, and port number.
  - `selection`: The selection under the cursor.
- - `markdown`: Yank title and URL in markdown format
- (deprecated, use `:yank inline [{title}]({url})` instead).
  - `inline`: Yank the text contained in the 'inline' argument.
  
 
