@@ -41,14 +41,6 @@ Feature: Yanking and pasting.
         Then the message "Yanked title to clipboard: Test title" should be shown
         And the clipboard should contain "Test title"
 
-    Scenario: Yanking markdown URL to clipboard
-        When I open data/title.html
-        And I wait for regex "Changing title for idx \d to 'Test title'" in the log
-        And I run :yank markdown
-        Then the warning ":yank markdown is deprecated, *" should be shown
-        And the message "Yanked markdown URL to clipboard: *" should be shown
-        And the clipboard should contain "[Test title](http://localhost:(port)/data/title.html)"
-
     Scenario: Yanking inline to clipboard
         When I open data/title.html
         And I run :yank inline '[[{url}][qutebrowser</3org]]'
