@@ -39,26 +39,6 @@ commands =
 
 # other envs
 
-[testenv:mkvenv]
-basepython = {env:PYTHON:python3}
-commands = {envpython} scripts/mkvenv.py --tox-error --pyqt-type link
-usedevelop = true
-deps =
-
-# This is undocumented, but it's a common typo, so let's make it work
-[testenv:mkenv]
-basepython = {[testenv:mkvenv]basepython}
-commands = {[testenv:mkvenv]commands}
-usedevelop = {[testenv:mkvenv]usedevelop}
-deps = {[testenv:mkvenv]deps}
-
-# Virtualenv with PyQt5 from PyPI
-[testenv:mkvenv-pypi]
-basepython = {env:PYTHON:python3}
-commands = {envpython} scripts/mkvenv.py --tox-error
-usedevelop = true
-deps =
-
 [testenv:misc]
 ignore_errors = true
 basepython = {env:PYTHON:python3}
